# codegen-kit

./: .gitmodules  Makefile  build.bash  codegen-kit.cabal  stack.yaml
architecture/: haskell.puml
demo/: Main.hs
demo/Demo/SamplesFor/ModelAndUtils/: Iso8601.hs
domain/: haskell-model-config.domain.yaml  haskell-model.domain.yaml  java-renderer.domain.yaml
test/: Main.hs
test/CodegenKit/ByLanguage/Haskell/Composers/: ExpSpec.hs  HashableSpec.hs
test/Tests/: HashableBuilder.hs  HaskellExpFormatter.hs
test/Tests/ByModule/ByLanguage/Haskell/Composers/: Exp.hs  Hashable.hs
