cabal-version: 3.0

name: codegen-kit
version: 0.1.0.1
synopsis: Code generation utils
homepage: https://github.com/nikita-volkov/codegen-kit
bug-reports: https://github.com/nikita-volkov/codegen-kit/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2022 Nikita Volkov
license: MIT
license-file: LICENSE
extra-source-files:
  domain/*.domain.yaml

source-repository head
  type: git
  location: git://github.com/nikita-volkov/codegen-kit.git

common language-settings
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010

library
  import: language-settings
  hs-source-dirs: library
  exposed-modules:
    CodegenKit.ByLanguage.Haskell.Contents.Cabal
    CodegenKit.ByLanguage.Haskell.Dependencies
    CodegenKit.ByLanguage.Haskell.ExpFormatter
    CodegenKit.ByLanguage.Haskell.FileSets.Stack
    CodegenKit.ByLanguage.Haskell.Modules.BaseDataTypes
    CodegenKit.ByLanguage.Haskell.Modules.BaseOperators
    CodegenKit.ByLanguage.Haskell.Modules.BasePrelude
    CodegenKit.ByLanguage.Haskell.ModuleSets.BasePreludes
    CodegenKit.ByLanguage.Haskell.ModuleSets.ModelAccessors
    CodegenKit.ByLanguage.Haskell.ModuleSets.ModelAccessors.Templates
    CodegenKit.ByLanguage.Haskell.ModuleSets.ModelAndUtils
    CodegenKit.ByLanguage.Haskell.ModuleSets.ModelTypes
    CodegenKit.ByLanguage.Haskell.Packaging
    CodegenKit.ByLanguage.Haskell.Snippets
    CodegenKit.ByLanguage.Java.Attoparsec
    CodegenKit.ByLanguage.Java.Builders.Equals
    CodegenKit.ByLanguage.Java.Builders.HashCode
    CodegenKit.ByLanguage.Java.Builders.HashCode.Snippets
    CodegenKit.ByLanguage.Java.Builders.JavaDoc
    CodegenKit.ByLanguage.Java.Builders.ProductClass
    CodegenKit.ByLanguage.Java.Builders.ToJson
    CodegenKit.ByLanguage.Java.Charsets
    CodegenKit.ByLanguage.Java.Code
    CodegenKit.ByLanguage.Java.Dsl
    CodegenKit.Dependencies
    CodegenKit.Fileset
    CodegenKit.JavaRenderer
    CodegenKit.JavaRenderer.Model
    CodegenKit.Packaging
    CodegenKit.Versioning
  other-modules:
    CodegenKit.Prelude
  build-depends:
    attoparsec,
    coalmine,
    directory,
    domain,
    domain-optics,
    extra,
    rerebase,
    structure-kit,
    text-builder-dev,

test-suite test
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:
    Main.hs
  other-modules:
    Tests.HaskellExpFormatter
  build-depends:
    coalmine,
    codegen-kit,
    rerebase <2,

test-suite demo
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: demo
  main-is: Main.hs
  other-modules:
    Demo.SamplesFor.ModelAndUtils.Iso8601
  build-depends:
    coalmine,
    codegen-kit,
    rerebase,
