cabal-version: 3.0
name:          codegen-kit
version:       0.1.0.1
synopsis:      Code generation utils
homepage:      https://github.com/nikita-volkov/codegen-kit
bug-reports:   https://github.com/nikita-volkov/codegen-kit/issues
author:        Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:    Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:     (c) 2022 Nikita Volkov
license:       MIT
license-file:  LICENSE

source-repository head
  type:     git
  location: git://github.com/nikita-volkov/codegen-kit.git

common base-settings
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    NoMonomorphismRestriction
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

common executable-settings
  import:      base-settings
  ghc-options: -O2 -threaded "-with-rtsopts=-N -I0 -qg"

library
  import:          base-settings
  hs-source-dirs:  library
  exposed-modules:
    CodegenKit.ByLanguage.Haskell.CodeTemplate
    CodegenKit.ByLanguage.Haskell.Composers.Cabal
    CodegenKit.ByLanguage.Haskell.Composers.Exp
    CodegenKit.ByLanguage.Haskell.Composers.Haddock
    CodegenKit.ByLanguage.Haskell.Composers.Hashable
    CodegenKit.ByLanguage.Haskell.Composers.Module
    CodegenKit.ByLanguage.Haskell.Composers.Stack
    CodegenKit.ByLanguage.Haskell.Dsls.Package
    CodegenKit.ByLanguage.Haskell.Modules.BaseDataTypes
    CodegenKit.ByLanguage.Haskell.Modules.BaseOperators
    CodegenKit.ByLanguage.Haskell.Modules.BasePrelude
    CodegenKit.ByLanguage.Haskell.ModuleSets.BasePreludes
    CodegenKit.ByLanguage.Haskell.ModuleSets.ModelAccessors
    CodegenKit.ByLanguage.Haskell.ModuleSets.ModelAccessors.Templates
    CodegenKit.ByLanguage.Haskell.ModuleSets.ModelAndUtils
    CodegenKit.ByLanguage.Haskell.ModuleSets.ModelTypes
    CodegenKit.ByLanguage.Haskell.Packaging
    CodegenKit.ByLanguage.Haskell.PackagingPresets.Dependencies
    CodegenKit.ByLanguage.Haskell.Snippets
    CodegenKit.ByLanguage.Haskell.Templates.ImportsBlock
    CodegenKit.ByLanguage.Java.Attoparsec
    CodegenKit.ByLanguage.Java.Builders.CompareTo
    CodegenKit.ByLanguage.Java.Builders.Equals
    CodegenKit.ByLanguage.Java.Builders.HashCode
    CodegenKit.ByLanguage.Java.Builders.HashCode.Snippets
    CodegenKit.ByLanguage.Java.Builders.JavaDoc
    CodegenKit.ByLanguage.Java.Builders.ProductClass
    CodegenKit.ByLanguage.Java.Builders.ToJson
    CodegenKit.ByLanguage.Java.Charsets
    CodegenKit.ByLanguage.Java.Code
    CodegenKit.ByLanguage.Java.Dsl
    CodegenKit.Dependencies
    CodegenKit.Versioning

  other-modules:   CodegenKit.Prelude
  build-depends:
    , attoparsec
    , coalmine
    , extra
    , rerebase
    , structure-kit
    , text-builder-dev

test-suite test
  import:             base-settings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    CodegenKit.ByLanguage.Haskell.Composers.ExpSpec
    CodegenKit.ByLanguage.Haskell.Composers.HashableSpec

  build-tool-depends: hspec-discover:hspec-discover >=2.11.7 && <3
  build-depends:
    , coalmine
    , codegen-kit
    , hspec

test-suite demo
  import:         base-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: demo
  main-is:        Main.hs
  other-modules:  Demo.SamplesFor.ModelAndUtils.Iso8601
  build-depends:
    , coalmine
    , codegen-kit
